# git-lab

./: 3.txt  README.md  main.py  pyproject.toml  report.md
docs/: conf.py
docs/_build/html/: .buildinfo  .buildinfo.bak  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  environment.pickle  index.doctree
docs/_build/html/.doctrees/api/: base.doctree  plane.doctree  solid.doctree
docs/_build/html/.doctrees/guide/: quickstart.doctree  shapes_overview.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/geolib/: base.html  plane.html  solid.html
docs/_build/html/_sources/: changelog.rst.txt  index.rst.txt
docs/_build/html/_sources/api/: plane.rst.txt
docs/_build/html/_sources/guide/: quickstart.rst.txt  shapes_overview.rst.txt
docs/_build/html/api/: base.html  plane.html  solid.html
docs/_build/html/guide/: quickstart.html  shapes_overview.html
docs/api/: base.rst  solid.rst
src/geolib/: __init__.py  base.py  plane.py  solid.py
