[project]
name = "geolib"
version = "0.1.0"
description = "Test Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinxcontrib-napoleon>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geolib"]
